@@ -1,9 +1,9 @@
 /*
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
- * 
+ *
  *    (C) 2002-2008, Open Source Geospatial Foundation (OSGeo)
- *    
+ *
  *    This library is free software; you can redistribute it and/or
  *    modify it under the terms of the GNU Lesser General Public
  *    License as published by the Free Software Foundation;
@@ -22,7 +22,6 @@ import java.io.IOException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
-
 import javax.xml.XMLConstants;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -30,7 +29,6 @@ import javax.xml.transform.dom.DOMSource;
 import javax.xml.validation.Schema;
 import javax.xml.validation.SchemaFactory;
 import javax.xml.validation.Validator;
-
 import org.w3c.dom.Document;
 import org.w3c.dom.NamedNodeMap;
 import org.w3c.dom.Node;
@@ -39,42 +37,36 @@ import org.xml.sax.SAXException;
 
 /**
  * @author Christian Mueller
- * 
- * The default implementation for GeneralizationInfosProvider, reading the info from an XML file.
- * 
- * The xml schema file is "/geninfos_1.0.xsd"
- * 
- * 
- *
- *
- *
+ *     <p>The default implementation for GeneralizationInfosProvider, reading the info from an XML
+ *     file.
+ *     <p>The xml schema file is "/geninfos_1.0.xsd"
  * @source $URL$
  */
 public class GeneralizationInfosProviderImpl implements GeneralizationInfosProvider {
 
-    protected final static String GENERALIZATION_INFOS_TAG = "GeneralizationInfos";
+    protected static final String GENERALIZATION_INFOS_TAG = "GeneralizationInfos";
 
-    protected final static String GENERALIZATION_INFO_TAG = "GeneralizationInfo";
+    protected static final String GENERALIZATION_INFO_TAG = "GeneralizationInfo";
 
-    protected final static String GENERALIZATION_TAG = "Generalization";
+    protected static final String GENERALIZATION_TAG = "Generalization";
 
-    protected final static String FEATURE_NAME_ATTR = "featureName";
+    protected static final String FEATURE_NAME_ATTR = "featureName";
 
-    protected final static String BASE_FEATURE_NAME_ATTR = "baseFeatureName";
+    protected static final String BASE_FEATURE_NAME_ATTR = "baseFeatureName";
 
-    protected final static String GEOM_PROPERTY_NAME_ATTR = "geomPropertyName";
+    protected static final String GEOM_PROPERTY_NAME_ATTR = "geomPropertyName";
 
-    protected final static String DISTANCE_ATTR = "distance";
+    protected static final String DISTANCE_ATTR = "distance";
 
-    protected final static String DATASOURCE_NAME_ATTR = "dataSourceName";
+    protected static final String DATASOURCE_NAME_ATTR = "dataSourceName";
 
-    protected final static String DATASOURCE_NAMESPACE_NAME_ATTR = "dataSourceNameSpace";
+    protected static final String DATASOURCE_NAMESPACE_NAME_ATTR = "dataSourceNameSpace";
 
-    protected final static String VERSION_ATTR = "version";
+    protected static final String VERSION_ATTR = "version";
 
     protected static Validator VALIDATOR;
-    static {
 
+    static {
         SchemaFactory factory = SchemaFactory.newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI);
 
         URL url = GeneralizationInfosProviderImpl.class.getResource("/geninfos_1.0.xsd");
@@ -97,26 +89,21 @@ public class GeneralizationInfosProviderImpl implements GeneralizationInfosProvi
     }
 
     protected URL deriveURLFromSourceObject(Object source) throws IOException {
-        if (source == null)
-            throw new IOException("Cannot read from null");
+        if (source == null) throw new IOException("Cannot read from null");
 
-        if (source instanceof URL)
-            return (URL) source;
+        if (source instanceof URL) return (URL) source;
 
         if (source instanceof String) {
             URL url = null;
             File f = new File((String) source);
-            if (f.exists())
-                url = f.toURI().toURL();
-            else
-                url = new URL((String) source);
+            if (f.exists()) url = f.toURI().toURL();
+            else url = new URL((String) source);
 
             url = new URL(URLDecoder.decode(url.toExternalForm(), "UTF8"));
             return url;
         }
 
-        if (source instanceof URI)
-            return ((URI) source).toURL();
+        if (source instanceof URI) return ((URI) source).toURL();
         return null;
     }
 
@@ -145,11 +132,10 @@ public class GeneralizationInfosProviderImpl implements GeneralizationInfosProvi
         if (attrMap.getNamedItem(DATASOURCE_NAME_ATTR) != null)
             gInfos.setDataSourceName(attrMap.getNamedItem(DATASOURCE_NAME_ATTR).getTextContent());
         if (attrMap.getNamedItem(DATASOURCE_NAMESPACE_NAME_ATTR) != null)
-            gInfos.setDataSourceNameSpace(attrMap.getNamedItem(DATASOURCE_NAMESPACE_NAME_ATTR)
-                    .getTextContent());
+            gInfos.setDataSourceNameSpace(
+                    attrMap.getNamedItem(DATASOURCE_NAMESPACE_NAME_ATTR).getTextContent());
         parseGeneralizationInfoNodes(gInfosNode, gInfos);
         return gInfos;
-
     }
 
     protected void parseGeneralizationInfoNodes(Node parentNode, GeneralizationInfos gInfos) {
@@ -167,28 +153,26 @@ public class GeneralizationInfosProviderImpl implements GeneralizationInfosProvi
             String geomPropertyName = null;
             if (attrMap.getNamedItem(GEOM_PROPERTY_NAME_ATTR) != null)
                 geomPropertyName = attrMap.getNamedItem(GEOM_PROPERTY_NAME_ATTR).getTextContent();
-            GeneralizationInfo gi = new GeneralizationInfo(baseFeatureName, featureName,
-                    geomPropertyName, gInfos);
+            GeneralizationInfo gi =
+                    new GeneralizationInfo(baseFeatureName, featureName, geomPropertyName, gInfos);
 
             if (attrMap.getNamedItem(DATASOURCE_NAME_ATTR) != null)
                 gi.setDataSourceName(attrMap.getNamedItem(DATASOURCE_NAME_ATTR).getTextContent());
 
             if (attrMap.getNamedItem(DATASOURCE_NAMESPACE_NAME_ATTR) != null)
-                gi.setDataSourceNameSpace(attrMap.getNamedItem(DATASOURCE_NAMESPACE_NAME_ATTR)
-                        .getTextContent());
+                gi.setDataSourceNameSpace(
+                        attrMap.getNamedItem(DATASOURCE_NAMESPACE_NAME_ATTR).getTextContent());
 
             parseDistanceInfoNodes(generalisationInfoNode, gi);
             gInfos.addGeneralizationInfo(gi);
         }
-
     }
 
     protected void parseDistanceInfoNodes(Node parentNode, GeneralizationInfo gInfo) {
         NodeList nl = parentNode.getChildNodes();
         for (int i = 0; i < nl.getLength(); i++) {
             Node distanceInfoNode = nl.item(i);
-            if (GENERALIZATION_TAG.equals(distanceInfoNode.getNodeName()) == false)
-                continue;
+            if (GENERALIZATION_TAG.equals(distanceInfoNode.getNodeName()) == false) continue;
 
             NamedNodeMap attrMap = distanceInfoNode.getAttributes();
 
@@ -203,12 +187,11 @@ public class GeneralizationInfosProviderImpl implements GeneralizationInfosProvi
                 di.setDataSourceName(attrMap.getNamedItem(DATASOURCE_NAME_ATTR).getTextContent());
 
             if (attrMap.getNamedItem(DATASOURCE_NAMESPACE_NAME_ATTR) != null)
-                di.setDataSourceNameSpace(attrMap.getNamedItem(DATASOURCE_NAMESPACE_NAME_ATTR)
-                        .getTextContent());
+                di.setDataSourceNameSpace(
+                        attrMap.getNamedItem(DATASOURCE_NAMESPACE_NAME_ATTR).getTextContent());
 
             gInfo.getGeneralizations().add(di);
         }
-
     }
 
     protected void checkVersion(Node gInfos) throws IOException {
@@ -216,7 +199,5 @@ public class GeneralizationInfosProviderImpl implements GeneralizationInfosProvi
         if ("1.0".equals(version) == false) {
             throw new IOException(gInfos.getLocalName() + " " + version + " is not supported");
         }
-
     }
-
 }
